# SafeCityAI

./: .env.example  .env.example.txt  .env.txt  .gitignore  A.Compose  API_DOCUMENTATION.md  DEVELOPMENT.md  Dockerfile  Dockerfile.txt  INSTALLATION.md  None  README.md  SplitStats  coverage.xml  detection_report.json  docker-compose.yml  fix_config.py  index.html  inference.py  logger_config.py  pyproject.toml  requirements-dev.txt  requirements-txt.txt  requirements.txt  server.py  setup_api_files.py  setup_env.py  setup_files.py  setup_final_files.py  setup_ml_files.py  setup_training_testing.py  test_api.py  test_video.py  video_processor.py
.github/workflows/: ci.yml  test.yml
api/: .dockerignore.txt  __init__.py  apischemas.py  config.py  coredetector.py  dependencies.py  image_utils.py  index.html  index.txt  middleware.py  schemas.py  server.py
data/: data.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  prometheus.yml
models/configs/: hyp_safecityai.yaml
notebooks/: 01_data_exploration.ipynb  03_inference.ipynb  04_evaluation.ipynb
notebooks/.ipynb_checkpoints/: 02_training-checkpoint.ipynb  03_inference-checkpoint.ipynb
src/: __init__.py  annotation_validator.py  augmentation.py  benchmark.py  callbacks.py  data_collector.py  data_utils.py  inference.py  metrics.py  trainer.py  visualizer.py
static/: index.html
tests/: conftest.py  test_api.py  test_api_server.py  test_augmentation.py  test_data.py  test_data_collector.py  test_data_pipeline.py  test_inference.py  test_metrics.py  test_utils.py
